@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.2.5
+VERSION=1.2.6
 
-DEPENDENCY="zeda=1.6.0"
+DEPENDENCY="zeda=1.6.3"
 
 # dynamic linker (libdl)
 CONFIG_USE_LIBDL=y
